# spaceraft

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  get_deps.sh
include/: viewport.h
src/: main.cpp  viewport.cpp
src/inc/: viewport.h
src/shaders/: fs_basic.sc  vs_basic.sc
